user data form structure

--- a/Week-2/part1/style.css
+++ b/Week-2/part1/style.css
@@ -74,3 +74,19 @@
   .page__img {
     grid-row: 2/ span 2;
   }
+
+  .bottom_line {
+    background-color: grey;
+    border-color: grey;
+    height: 2px;
+  }
+
+  fieldset {
+    display: flex;
+    flex-direction: column;
+    border: none;
+    justify-content:flex-start;
+    gap: 15px;
+  }
+
+
