fixed country dropdown list

--- a/Week-2/part1/style.css
+++ b/Week-2/part1/style.css
@@ -50,6 +50,16 @@
     line-height: 1;
   }
   
+  .visually-hidden:not(:focus):not(:active) {
+    clip: rect(0 0 0 0);
+    clip-path: inset(50%);
+    height: 1px;
+    overflow: hidden;
+    position: absolute;
+    white-space: nowrap;
+    width: 1px;
+}
+  
   body {
     place-content: center;
     margin: 1rem;
@@ -89,3 +99,5 @@
     gap: 15px;
   }
 
+
+  
